Cycles world MIS segfault #40514

Closed
opened 2014-06-06 01:41:23 +02:00 by Ejner Fergo · 12 comments

System Information
Arch Linux 64bit
GCC 4.9.0

Blender Version
Broken: git master
Worked: official + buildbot

Short description of error
Turning on MIS for world environment texture crashes Blender with either CPU or GPU/CUDA

Exact steps for others to reproduce the error
In Cycles world tab, use an environment texture (.exr/.hdr). Pressing shift+z and it is working - enabling MIS crashes Blender, whether in rendered mode or not. Without knowing, I suspect it is related to GCC 4.9.0, like with previous crash bugs some weeks ago.

Crash log

Blender 2.70 (sub 5), Commit date: 2014-06-05 20:14, Hash 98bf395

bpy.context.space_data.context = 'WORLD' # Property
bpy.ops.image.open(filepath="/projects/textures/uffizi-large.exr", directory="/projects/textures/", files=[{"name":"uffizi-large.exr", "name":"uffizi-large.exr"}], relative_path=True) # Operator
bpy.context.scene.world.cycles.sample_as_light = True # Property
bpy.context.scene.world.cycles.sample_as_light = True # Property

backtrace

./blender() [0x8d3d88]
/usr/lib/libc.so.6(+0x33df0) [0x7f46e4734df0]
./blender(_ZN3ccl12LightManager24device_update_backgroundEPNS_6DeviceEPNS_11DeviceSceneEPNS_5SceneERNS_8ProgressE+0x799) [0x159b239]
./blender(_ZN3ccl12LightManager13device_updateEPNS_6DeviceEPNS_11DeviceSceneEPNS_5SceneERNS_8ProgressE+0xdc) [0x159baac]
./blender(_ZN3ccl5Scene13device_updateEPNS_6DeviceERNS_8ProgressE+0x4ef) [0x15c72bf]
./blender(_ZN3ccl7Session12update_sceneEv+0x146) [0x15ca4e6]
./blender(_ZN3ccl7Session7run_cpuEv+0x15f) [0x15cc28f]
./blender(_ZN3ccl7Session3runEv+0x1a5) [0x15cd1d5]
./blender(_ZN3ccl6thread3runEPv+0x19) [0x15cdef9]
/usr/lib/libpthread.so.0(+0x7124) [0x7f46f0b01124]
/usr/lib/libc.so.6(clone+0x6d) [0x7f46e47ea4bd]

**System Information** Arch Linux 64bit GCC 4.9.0 **Blender Version** Broken: git master Worked: official + buildbot **Short description of error** Turning on MIS for world environment texture crashes Blender with either CPU or GPU/CUDA **Exact steps for others to reproduce the error** In Cycles world tab, use an environment texture (.exr/.hdr). Pressing shift+z and it is working - enabling MIS crashes Blender, whether in rendered mode or not. Without knowing, I suspect it is related to GCC 4.9.0, like with previous crash bugs some weeks ago. **Crash log** # Blender 2.70 (sub 5), Commit date: 2014-06-05 20:14, Hash 98bf395 bpy.context.space_data.context = 'WORLD' # Property bpy.ops.image.open(filepath="/projects/textures/uffizi-large.exr", directory="/projects/textures/", files=[{"name":"uffizi-large.exr", "name":"uffizi-large.exr"}], relative_path=True) # Operator bpy.context.scene.world.cycles.sample_as_light = True # Property bpy.context.scene.world.cycles.sample_as_light = True # Property # backtrace ./blender() [0x8d3d88] /usr/lib/libc.so.6(+0x33df0) [0x7f46e4734df0] ./blender(_ZN3ccl12LightManager24device_update_backgroundEPNS_6DeviceEPNS_11DeviceSceneEPNS_5SceneERNS_8ProgressE+0x799) [0x159b239] ./blender(_ZN3ccl12LightManager13device_updateEPNS_6DeviceEPNS_11DeviceSceneEPNS_5SceneERNS_8ProgressE+0xdc) [0x159baac] ./blender(_ZN3ccl5Scene13device_updateEPNS_6DeviceERNS_8ProgressE+0x4ef) [0x15c72bf] ./blender(_ZN3ccl7Session12update_sceneEv+0x146) [0x15ca4e6] ./blender(_ZN3ccl7Session7run_cpuEv+0x15f) [0x15cc28f] ./blender(_ZN3ccl7Session3runEv+0x1a5) [0x15cd1d5] ./blender(_ZN3ccl6thread3runEPv+0x19) [0x15cdef9] /usr/lib/libpthread.so.0(+0x7124) [0x7f46f0b01124] /usr/lib/libc.so.6(clone+0x6d) [0x7f46e47ea4bd]
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @EjnerFergo

Added subscriber: @EjnerFergo

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Please always post blend files, this way if we can't redo the bug, we know its not because of some minor difference in the configuration.

Please always post blend files, this way if we can't redo the bug, we know its not because of some minor difference in the configuration.
Author

Sorry Campbell, it happened on the default Cube scene (and eg. koro_final.blend where MIS is enabled) so didn't think to save a .blend! Here is one now. It isn't even necessary to load an environment texture first - just enabling the world MIS and shift to rendered mode crashes Blender for me.

mis_crash.blend

Sorry Campbell, it happened on the default Cube scene (and eg. koro_final.blend where MIS is enabled) so didn't think to save a .blend! Here is one now. It isn't even necessary to load an environment texture first - just enabling the world MIS and shift to rendered mode crashes Blender for me. [mis_crash.blend](https://archive.blender.org/developer/F92845/mis_crash.blend)

Added subscriber: @brecht

Added subscriber: @brecht

I can't redo here but also don't have GCC 4.9 installed. Looking at https://gcc.gnu.org/gcc-4.9/porting_to.html, I see there is one memset in this part of the code but it looks ok to me. There's also some tricky array indexing but it stays within bounds as far as I can tell.

Does anyone have a backtrace with debug symbols for this? Seems like something that could be easy to solve, but it's not clear to me what exactly is crashing.

I can't redo here but also don't have GCC 4.9 installed. Looking at https://gcc.gnu.org/gcc-4.9/porting_to.html, I see there is one `memset` in this part of the code but it looks ok to me. There's also some tricky array indexing but it stays within bounds as far as I can tell. Does anyone have a backtrace with debug symbols for this? Seems like something that could be easy to solve, but it's not clear to me what exactly is crashing.

This issue was referenced by 8392e83e13

This issue was referenced by 8392e83e134c4a3d29289e88376425b30c11ac42

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8392e83e13.

Closed by commit 8392e83e13.

Thanks!

Thanks!
Author

Thank you!

Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40514
No description provided.