Fix T40514: Cycles world MIS segfault